# OpenCode-Trading-Bot

./: .gitignore  README.md  deploy.sh  hermes-altfins-verification.md  pyproject.toml
.githooks/: pre-commit
docs/: freqtrade-fidelity-assesment.md  hermes-signal-spec-v1.md
freqtrade_lab/: config-hermes-dryrun.json
freqtrade_lab/strategies/: HermesPerpStrategy.py
scripts/: _get_state.py  _status_report.py  ab_checkpoint.py  audit.py  backfill_candles.py  backfill_historical.py  backfill_historical_v2.py  backtest_30d.py  check_churn_24h.py  closed_loop.py.bak  daily_health.py  daily_recs.py  daily_reflection.py  dashboard_audit.py  deep_audit.py  expectancy_momentum.py  go_live_review.sh  health_check.py  historical_backtest.py  ic_ready_check.py  import_hyperliquid_ohlcv.py  invariant_sweep.py  migrate_lessons.py  mr_monitor.py  run_reflection.sh  setup_coinbase_env.py  sharpe_tracker.py  snapshot_baseline.py  staleness_check.py  status_report.py  strategy_budget.py  submit_intent.py  telegram_audit.py  test_coinbase_live.py  verify_method_calls.py  weekly_reflection.py
src/: main.py  sma200_control.py  sma200_runner.py
src/adapters/: _hyperliquid_deprecated.py  altfins.py  base.py  coinbase_advanced.py  coinbase_execution_adapter.py  hyperliquid.py  kalshi.py  paper_perp.py
src/core/: event_kill.py  execution_engine.py  experiment_registry.py  fill_calibration.py  intents.py  (+15 more)
tests/: conftest.py  test_coinbase_adapter.py  test_execution_invariants.py  test_freqtrade_bridge_static.py  test_hyperliquid_adapter.py  test_regressions.py  test_simulation.py
(+15 files in other folders)
